<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="1"
    android:useDefaultMargins="true"
    >

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>
-->

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_gravity="end"
        >

        <TextView
            android:id="@+id/bookCopiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/copies" />

        <TextView
            android:id="@+id/bookLoanedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/loaned" />

        <TextView
            android:id="@+id/bookAvailablesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/availables" />

        <TextView
            android:id="@+id/bookCopies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/unspecified"
            />

        <TextView
            android:id="@+id/bookLoaned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/unspecified"
            />

        <TextView
            android:id="@+id/bookAvailables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/unspecified"
            />

    </GridLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:columnCount="2"
        android:rowCount="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/title" />

        <TextView
            android:id="@+id/bookAuthorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/author" />

        <TextView
            android:id="@+id/bookGenreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/unspecified" />

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/unspecified" />

        <TextView
            android:id="@+id/bookGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/unspecified" />

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookIDLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <TextView
            android:id="@+id/bookID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unspecified" />
    </LinearLayout>


</GridLayout>
