<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="3"
        android:rowCount="1"
        >

        <!-- Book info -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loanBookLabel"
                android:textSize="@dimen/section_label_size"
                />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5"
                android:useDefaultMargins="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/loanTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:text="@string/unspecified" />

                <TextView
                    android:id="@+id/loanAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:text="@string/unspecified" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/author" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/loanGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:text="@string/unspecified" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/loanID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:text="@string/unspecified" />


            </GridLayout>

        </LinearLayout>

        <!-- Current loaner info -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/loan_current_loaner_label"
                android:textSize="@dimen/section_label_size"
                />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:useDefaultMargins="true"
                android:columnCount="2"
                android:rowCount="2"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/loan_loaner_name_label"
                    />

                <TextView
                    android:id="@+id/loanLoanerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/unspecified"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/loan_loaner_id_label"
                    />

                <TextView
                    android:id="@+id/loanLoanerID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/unspecified"
                    />


            </GridLayout>

        </LinearLayout>

        <!-- Interaction -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="end"
            >

            <Button
                android:id="@+id/loanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan"
                android:gravity="center_vertical"
                />

        </RelativeLayout>

    </GridLayout>


</LinearLayout>